# TgeN

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
assets/manifests/default/: generate.bat
module/: main.py
module/assets/manifests/default/: manifest.json
module/helpers/: creation.py  ini_config.py  manifest.py
src/tgen/: main.py
src/tgen/helpers/: creation.py  ini_config.py  manifest.py  utils.py
